[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Loby.gd" type="Script" id=1]

[node name="Loby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -30.0
margin_right = 127.5
margin_bottom = 30.0

[node name="WinLooseLabel" type="Label" parent="VBoxContainer"]
margin_right = 255.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 255.0
margin_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 51.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Pseudo:"
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 51.0
margin_bottom = 46.0
text = "Time:"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 255.0
margin_bottom = 48.0

[node name="PseudoTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 200, 28 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 48.0

[node name="MinutesHSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 110.0
margin_bottom = 16.0
rect_min_size = Vector2( 110, 16 )
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 114.0
margin_right = 195.0
margin_bottom = 16.0

[node name="MinutesLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 15.0
text = "100"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/HBoxContainer"]
margin_left = 28.0
margin_top = 1.0
margin_right = 81.0
margin_bottom = 15.0
text = "minutes"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 255.0
margin_bottom = 112.0

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_right = 125.0
margin_bottom = 28.0
rect_min_size = Vector2( 125, 28 )
text = "Join"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 129.0
margin_right = 254.0
margin_bottom = 28.0
rect_min_size = Vector2( 125, 28 )
text = "Create"
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/MinutesHSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/CreateButton" to="." method="_on_CreateButton_pressed"]
